# license-management-core

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: hymmalmConfig.cmake.in
docs/: AUDIT-2026-07-12-senior-native.md
include/hymma/: hlm.h  hlm_ffi.h
src/core/: hlm_b64url.c  hlm_b64url.h  hlm_client.c  hlm_ffi.c  hlm_json.c  hlm_json.h  hlm_jws.c  hlm_sha512.c  hlm_sntp.h
src/crypto/: hlm_crypto_cng.c  hlm_crypto_portable.c  hlm_ed25519.c
src/ports/: hlm_port_posix.c  hlm_port_win.c
tests/: hlm_flow_tests.c  hlm_tests.c
tests/vectors/: vectors-eddsa.json  vectors.json
tools/: machineid.c
tools/eddsa-vectorgen/: gen.py
tools/vectorgen/: Program.cs  VectorGen.csproj
wrappers/dotnet/Hymma.Lm.Core/: Hymma.Lm.Core.csproj  LicenseClient.cs  NativeMethods.cs
wrappers/dotnet/Hymma.Lm.Core.Demo/: Hymma.Lm.Core.Demo.csproj  Program.cs
wrappers/dotnet/LicenseManagement.Core/: LicenseClient.cs  LicenseManagement.Core.csproj  NativeMethods.cs  README.md
wrappers/dotnet/LicenseManagement.Core.Demo/: LicenseManagement.Core.Demo.csproj  Program.cs
wrappers/go/: README.md  go.mod  hlm_bignum.c  hlm_bignum.h  hlm_client.c  hlm_crypto_cng.c  hlm_ed25519.c  hlm_ed25519.h  hlm_ffi.c  hlm_jws.c  hlm_license.c  hlm_p256.c  hlm_port_posix.c  hlm_port_win.c  hlm_ports_common.c  hlm_rsa.c  hlm_sha256.c  hlm_sha256.h  hlm_sha512.h  hymmalm.go  hymmalm_test.go  sync-csrc.sh
wrappers/go/include/hymma/: hlm.h
wrappers/java/: README.md  pom.xml  run-tests.sh
wrappers/java/src/main/java/com/hymma/licensing/: LicenseClient.java  LicenseClientOptions.java  LicenseException.java  LicenseStatus.java  Native.java  SignedFormat.java
wrappers/java/src/main/java/net/hymma/licensing/: LicenseClient.java  LicenseClientOptions.java  LicenseException.java  LicenseStatus.java  Native.java  SignedFormat.java
wrappers/java/src/test/java/com/hymma/licensing/: FlowTests.java  Json.java  TestRunner.java  VectorTests.java
wrappers/java/src/test/java/net/hymma/licensing/: FlowTests.java  Json.java  TestRunner.java  VectorTests.java
wrappers/node/: README.md  index.d.ts  index.js  package.json
wrappers/node/test/: flow.test.js  vectors.test.js
wrappers/php/: README.md  composer.json
wrappers/php/src/: LicenseClient.php  LicenseException.php  LicenseStatus.php  Native.php  SignedFormat.php
wrappers/php/tests/: flow-test.php  mock-router.php  run.php  vectors-test.php
wrappers/python/: README.md  pyproject.toml  setup.py
wrappers/python/hymmalm/: __init__.py
wrappers/python/tests/: test_flow.py  test_vectors.py
wrappers/rust/: Cargo.toml  README.md  build.rs  sync-csrc.sh
wrappers/rust/csrc/include/hymma/: hlm.h
wrappers/rust/csrc/src/core/: hlm_bignum.c  hlm_client.c  hlm_ffi.c  hlm_json.c  hlm_json.h  hlm_jws.c  hlm_sha512.c  hlm_sha512.h
wrappers/rust/csrc/src/crypto/: hlm_crypto_cng.c  hlm_crypto_portable.c  hlm_ed25519.c  hlm_ed25519.h  hlm_p256.h  hlm_rsa.c  hlm_rsa.h
wrappers/rust/csrc/src/ports/: hlm_port_posix.c  hlm_port_win.c  hlm_ports_common.c
wrappers/rust/src/: ffi.rs  lib.rs
wrappers/rust/tests/: flow.rs  vectors.rs
