# hymmalm — Rust wrapper for license-management-core.
#
# The crate vendors the C core under csrc/ (copies maintained by
# sync-csrc.sh, drift-checked in CI): build.rs compiles them with the `cc`
# crate and links them statically, so `cargo add hymmalm` needs no
# separately built native library — exactly what a Tauri app wants — and
# `cargo publish` ships a self-contained tarball.

[package]
name = "hymmalm"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Licensing client for license-management.com: JWS-signed license verification, trial bootstrap, activation and offline cache. Statically vendors the C core (Tauri-ready)."
repository = "https://github.com/HYMMA/license-management-core"
readme = "README.md"
keywords = ["license", "licensing", "jws", "drm", "tauri"]
categories = ["api-bindings", "authentication"]
# tests/ are excluded: they replay ../../tests/vectors from the repo checkout,
# which a published tarball does not contain.
include = ["Cargo.toml", "build.rs", "src/**", "csrc/**", "README.md"]

[build-dependencies]
cc = "1"

[dev-dependencies]
serde_json = "1"
